--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -8,7 +8,17 @@
     </script>
 </head>
 <body>
-   
+    <h1>
+        Rock, Paper, Scissors
+    </h1>
+   <div id="scores">
+        <p id="human">
+            Your Score: <span id="hscore"></span>
+        </p>
+        <p id="computer">
+            Computer Score: <span id="cscore"></span>
+        </p>
+   </div>
     <div>
         <button id="rock" value="rock">
             Rock
