Show text who won

--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -19,6 +19,8 @@
             Computer Score: <span id="cscore"></span>
         </p>
    </div>
+   <div id="winner">
+   </div>
     <div>
         <button id="rock" value="rock">
             Rock
@@ -30,6 +32,9 @@
             Scissors
         </button>
     </div>
+    <button id="reset">
+        Reset
+    </button>
     <script>
     
     </script>
